<resources>
    <string name="app_name">hexmeet</string>

    <string name="server_unavailable">服务器不可用,请检查网络设置</string>
    <string name="network_unconnected">网络未连接</string>
    <string name="unregistered">未注册视频服务</string>
    <string name="ucm_unreachable">服务器不可用,请检查网络设置</string>
    <string name="reject">拒绝接入</string>
    <string name="remote_is_busy">对方正在通话中</string>
    <string name="delete">删除</string>
    <string name="detail">详情</string>
    <string name="audio">语音</string>
    <string name="video">视频</string>
    <string name="missed">未接</string>
    <string name="dial_in">呼入</string>
    <string name="dial_out">呼出</string>
    <string name="duration_hour">小时</string>
    <string name="druation_minute">分</string>
    <string name="duration_second">秒</string>
    <string name="date_format">yyyy年MM月dd日</string>
    <string name="you_have">最近有</string>
    <string name="missed_call">次未接呼叫</string>
    <string name="commit">完成</string>
    <string name="join_via_audio">语音入会</string>
    <string name="join_via_video">视频入会</string>
    <string name="generator">发起者：</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="yesterday">昨天</string>
    <string name="back">后退</string>
    <string name="call_statistics">媒体统计信息</string>
    <string name="participant_detail">与会者详情</string>
    <string name="delete_contact">删除联系人</string>
    <string name="peer_has_not_video_cap">对方不具备视频通话条件！</string>
    <string name="tips">提示</string>
    <string name="warning_4g_message">在移动网络环境下将会消耗较多流量，您是否要继续？</string>
    <string name="warning_meeting_startnow">您的会议将被提前到现在召开，是否继续？</string>
    <string name="go_on">继续</string>
    <string name="login_again">请登录一次</string>
    <string name="refreshing">加载中…</string>
    <string name="invalid_username_or_password">无效的用户名或密码</string>
    <string name="error_account_or_password">账号或密码错误</string>
    <string name="invalid_server_address">服务器地址格式错误</string>


    <string name="offine">离线</string>
    <string name="online">上线</string>
    <string name="waiting_for_connect">正在等待链接</string>
    <string name="connecting">连接中..</string>
    <string name="registering">注册中..</string>
    <string name="authorizing">发起认证</string>

    <string name="title_channel">会议室%s</string>
    <string name="room_input">输入会议室号码</string>
    <string name="video_enter">进入视频通话</string>
    <string name="micro_enter">进入语音通话</string>
    <string name="video_button">视频通话</string>
    <string name="micro_button">语音通话</string>
    <string name="key_required">Key不能为空</string>
    <string name="room_required">会议室号码不能为空, 且需要是整数</string>
    <string name="room_button_one">静音</string>
    <string name="room_button_two">扬声器</string>
    <string name="room_button_three">关闭摄像头</string>
    <string name="room_button_four">切换摄像头</string>
    <string name="room_button_invite">继续邀请</string>
    <string name="room_prepare">会议室等待参会人员加入</string>
    <string name="network_error">网络无法连接，点击重连...</string>
    <string name="error_101">无效的厂商Key</string>
    <string name="error_confirm">确定</string>
    <string name="audio_call">语音呼叫</string>
    <string name="video_call">视频呼叫</string>
    <string name="telephone">座机</string>
    <string name="email">邮箱</string>
    <string name="mobile">手机</string>
    <string name="call_num">呼叫ID</string>
    <string name="account">账号</string>
    <string name="end_call">挂断</string>
    <string name="audio_only_mute_on">静音开</string>
    <string name="audio_only_use_earphone">请使用听筒接听</string>
    <string name="speaker_earphone">免提</string>
    <string name="mute">静音</string>
    <string name="audio_only_using_earphone">正在使用耳机接听</string>
    <string name="network_instability">当前网络不稳定，可能会影响您的会话质量</string>
    <string name="contact">通讯录</string>
    <string name="invite_you_to_call">邀请您通话</string>
    <string name="conference_detail">会议详情</string>
    <string name="conf_is_being_launched">会议启动中,稍后再入会</string>
    <string name="confirm_terminate">确定要结束</string>
    <string name="terminate_conference">结束会议</string>
    <string name="start">开    始:</string>
    <string name="finish">结    束:</string>
    <string name="end">结束</string>
    <string name="fail">失败: </string>
    <string name="update">修改</string>
    <string name="please_enter">请输入</string>
    <string name="conference_password_restrictions">会议密码不能超过12位</string>
    <string name="ok">确定</string>
    <string name="starttime_later_than_endtime">会议的结束时间不能小于开始时间 , 请重新选择</string>
    <string name="later_than_now">须安排到当前时间或晚于当前时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="conf_num">会   议   ID</string>
    <string name="conf_password">会议密码</string>
    <string name="input_password_tips">请输入会议密码</string>
    <string name="meeting_room">会  议  室</string>
    <string name="conf_remark">会议备注</string>
    <string name="conf_remark_tips">请输入会议备注</string>
    <string name="invite_contacts">这里邀请联系人</string>
    <string name="not_found_user">未找到与呼叫号对应的用户</string>
    <string name="schedule_meeting_timeout">预约会议超时</string>
    <string name="update_meeting_timeout">更新会议超时</string>
    <string name="scheduler_fail">约会失败</string>
    <string name="scheduler">创建</string>
    <string name="schedulering">创建中</string>
    <string name="conference_scheduler">创建会议</string>
    <string name="edit_conference">编辑会议</string>
    <string name="delete_conference">删除会议</string>
    <string name="start_now">立即召开</string>
    <string name="at_least_one_contact">至少要选一个联系人.</string>
    <string name="only_applicants_can_modify">只有本会议的申请者能修改</string>
    <string name="update_fail">修改失败: </string>
    <string name="only_applicants_can_startnow">只有本会议的申请者能立即开始</string>
    <string name="update_conf_fail">改为立即会议失败: </string>
    <string name="only_applicants_can_delete">只有本会议的申请者能删除</string>
    <string name="client_not_installed">您还未安装微信客户端</string>
    <string name="dialing">拨号</string>
    <string name="input_call_number_tips">请输入呼叫ID(加*密码)</string>
    <string name="no_call_record">暂无通话记录</string>
    <string name="tab_conference">会议</string>
    <string name="confirm_delete">确定要删除</string>
    <string name="delete_recording">删除呼叫记录</string>
    <string name="group_has_incomplete_conference">群组里有未完成的会议。</string>
    <string name="connection_timeout">网络连接超时，请更换服务器或稍后再试！</string>
    <string name="join_meeting">加入会议</string>
    <string name="input_call_number">请输入会议ID</string>
    <string name="meeting_finished"> 会议已经结束</string>
    <string name="call_id_too_long">呼叫ID过长</string>
    <string name="format">格式 123456或123456*888888</string>
    <string name="dialing_detail">通话详情</string>
    <string name="add_as_contact">加为联系人</string>
    <string name="upgrade_title">有新版本啦!</string>
    <string name="upgrade_now">立即更新</string>
    <string name="one_week_later">一周以后</string>
    <string name="version">【新版本号】</string>
    <string name="publish_time">【发布日期】</string>
    <string name="package_description">【版本描述】</string>
    <string name="not_found_related_user">未找到与改号码相关联的用户</string>
    <string name="current_is_the_latest">当前已经是最新版本,不需要更新</string>
    <string name="action_success">操作成功</string>
    <string name="action_fail">操作失败</string>
    <string name="no_conference_hint">您暂无预约会议</string>
    <string name="please_click">请点击</string>
    <string name="add_conference">开始预约</string>
    <string name="conf_success">预约成功</string>
    <string name="conf_success_tips">您的会议已预约成功!</string>
    <string name="confname">会议名称:</string>
    <string name="starttime">开始时间:</string>
    <string name="endtime">结束时间:</string>
    <string name="confnum">会议ID:</string>
    <string name="confpassword">会议密码: </string>
    <string name="share_wechat">微信分享 </string>
    <string name="sync_calendar">同步到日历 </string>
    <string name="accept_in_audio">语音接听</string>
    <string name="accept_in_video">视频接听</string>
    <string name="call_rate">呼叫速率</string>
    <string name="call_rate_3g">3G/4G速率</string>
    <string name="call_rate_WiFi">WiFi速率</string>
    <string name="conf_name">会议名称</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="submit">提交</string>
    <string name="edit">编辑</string>

    <string name="add_friend_seccess">已是好友</string>
    <string name="add_friend_send_seccess">好友请求发送成功</string>


</resources>
