<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="@color/title_bar"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:focusable="true"
            android:paddingBottom="14dip"
            android:paddingEnd="15dip"
            android:paddingStart="12dip"
            android:paddingTop="14dip"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/dialing_detail"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/title_bar_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title_bar"
        android:background="#f1f1f1"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/peer_info"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:layout_below="@id/title_bar_divider"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <com.lensim.fingerchat.hexmeet.widget.MLRoundedImageView
            android:id="@+id/avatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/back"
            android:src="@drawable/icon_contact" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/font_color_313131"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/peer_info"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/call_video"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#fff"
                android:scaleType="centerInside"
                android:src="@drawable/btn_video_ex" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video"
                android:textColor="#c1c1c1"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/call_audio"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#fff"
                android:scaleType="centerInside"
                android:src="@drawable/btn_audio_ex" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio"
                android:textColor="#c1c1c1"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_as_contact_layout"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageButton
                android:id="@+id/add_as_contact"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#fff"
                android:scaleType="centerInside"
                android:src="@drawable/btn_add_as_contact" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_as_contact"
                android:textColor="#c1c1c1"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/delete"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#fff"
                android:scaleType="centerInside"
                android:src="@drawable/btn_delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="#c1c1c1"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/peer_info_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/buttons"
        android:background="#e1e1e1"
        android:orientation="horizontal" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/peer_info_divider"
        android:gravity="top"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:id="@+id/call_history_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        </LinearLayout>
    </ScrollView>

</RelativeLayout>