<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/call_in_out_flag"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:src="@drawable/icon_dialed" />

        <com.lensim.fingerchat.hexmeet.widget.MLRoundedImageView
            android:id="@+id/peer_avatar"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/icon_contact" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/peer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxEms="12"
                android:maxWidth="220dp"
                android:singleLine="true"
                android:textColor="@color/font_color_313131"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/extra_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:textColor="#919191"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:singleLine="true"
            android:textColor="#919191"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/expandable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f4f4f4"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/call_record_video"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#f4f4f4"
                android:scaleType="centerInside"
                android:src="@drawable/btn_video_ex" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video"
                android:textColor="#c1c1c1"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/call_record_audio"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#f4f4f4"
                android:scaleType="centerInside"
                android:src="@drawable/btn_audio_ex" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio"
                android:textColor="#c1c1c1"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/delete"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#f4f4f4"
                android:scaleType="centerInside"
                android:src="@drawable/btn_delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="#c1c1c1"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/call_record_info"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#f4f4f4"
                android:scaleType="centerInside"
                android:src="@drawable/btn_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textColor="#c1c1c1"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>