<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/conversation_toolbar_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:gravity="center_horizontal" >

    <RelativeLayout
        android:id="@+id/layout_mic_mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:padding="2dp" >

        <ImageButton
            android:id="@+id/mic_mute_btn"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:alpha="0.6"
            android:background="@drawable/bkg_circle"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_unmute" />

        <TextView
            android:id="@+id/video_mute_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mic_mute_btn"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/mute"
            android:textColor="#313131"
            android:textSize="13sp"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_video_mute"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:padding="2dp" >

        <ImageButton
            android:id="@+id/video_mute_btn"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:alpha="0.6"
            android:background="@drawable/bkg_circle"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_camera_on" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_camera_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:padding="2dp" >

        <ImageButton
            android:id="@+id/camera_switch_btn"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:alpha="0.6"
            android:background="@drawable/bkg_circle"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_camera_switch" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_end_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:padding="2dp" >

        <ImageButton
            android:id="@+id/endcall_btn"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:alpha="1"
            android:background="@drawable/bkg_circle"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_hangup" />

        <TextView
            android:id="@+id/endcall_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/endcall_btn"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/end_call"
            android:textColor="#313131"
            android:textSize="13sp"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_speaker_earphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/speaker_earphone"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:alpha="1"
            android:background="@drawable/bkg_circle"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_handsfree_on" />

        <TextView
            android:id="@+id/speaker_earphone_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/speaker_earphone"
            android:layout_marginBottom="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/speaker_earphone"
            android:textColor="#313131"
            android:textSize="13sp"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>